add 'create superuser' command
